--- a/app/views/common/_footer.html.erb
+++ b/app/views/common/_footer.html.erb
@@ -1,6 +1,13 @@
-<footer class="container" style="margin-top: 100px;">
-	<p class="text-center">Copyright ©2017 JDstore
-	<br>Design by dongmy
-		
-	</p>
-</footer>
+ <div class="footer-style">
+ <br>
+   <ul class="ul-style">
+   	   <li>
+   	          <a href="#">关于我们</a>
+   	          <a href="#">联系我们</a>
+   	   </li>
+   	   
+   </ul>
+	<p >Copyright ©2017 Desgin By 董名晏 和 孙艳</p>
+	     <p class="text-center">爱家商城欢迎您的光临</p>
+</div>
+
