design front-page

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,1 +1,56 @@
-<h1> Hello World! </h1>
+<section class="jk-slider">
+    <div id="carousel-example" class="carousel slide" data-ride="carousel">
+  <ol class="carousel-indicators">
+    <li data-target="#carousel-example" data-slide-to="0" class="active"></li>
+    <li data-target="#carousel-example" data-slide-to="1"></li>
+    <li data-target="#carousel-example" data-slide-to="2"></li>
+  </ol>
+
+  <div class="carousel-inner">
+    <div class="item active">
+      <a href="#"><img src="https://ww4.sinaimg.cn/large/006tNbRwgy1fcvv8b34uij31hc0m8wok.jpg" /></a>
+      	<div class="hero">
+        <hgroup>
+            <h1>爱工作</h1>
+            <h1>也是爱生活</h1>
+            <h3>从工作到生活，你想要的这里都有</h3>
+            <p>WE ARE ILIFER!</p>
+        </hgroup>
+
+      </div>
+    </div>
+    <div class="item">
+      <a href="#"><img src="https://ww2.sinaimg.cn/large/006tNbRwgy1fcvuyupn66j31hc0m84qq.jpg" /></a>
+      <div class="hero">
+        <hgroup>
+            <h1>享受用餐</h1>
+            <h1>让你活力每一天</h1>
+            <h3>从工作到生活，你想要的这里都有</h3>
+            <p>WE ARE ILIFER!</p>
+        </hgroup>
+
+      </div>
+    </div>
+    <div class="item">
+      <a href="#"><img src="https://ww4.sinaimg.cn/large/006tNbRwgy1fcvw66xzmyj31hc0m8doz.jpg" /></a>
+      <div class="hero">
+        <hgroup>
+            <h1>你的睡眠</h1>
+            <h1>由我来照顾</h1>
+            <h3>从工作到生活，你想要的这里都有 </h3>
+            <p>WE ARE ILIFER!</p>
+        </hgroup>
+
+      </div>
+    </div>
+  </div>
+
+  <a class="left carousel-control" href="#carousel-example" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left"></span>
+  </a>
+  <a class="right carousel-control" href="#carousel-example" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right"></span>
+  </a>
+</div>
+
+</section>
