--- a/app/views/admin/products/new.html.erb
+++ b/app/views/admin/products/new.html.erb
@@ -19,8 +19,9 @@
 </div>
 
 <div class="group">
-	<%= f.input :image, as: :file %>
-</div>
+    <%= f.label :image %><br>
+    <%= f.file_field :image, :multiple => true, name: "photos[image][]" %>（"请上传5张商品图片"）<br>
+ </div>
 
 <%= f.submit "Submit", data: { disable_with: "Submitting..." } %>
 
