--- a/app/views/admin/products/edit.html.erb
+++ b/app/views/admin/products/edit.html.erb
@@ -22,6 +22,7 @@
 		<span>目前商品图</span> <br>
 		<% @product.photos.each do |p| %>
        <%= image_tag p.image.thumb.url %><br />
+       <% end %>
 	<% end %>
 
 	<div class="group">
