--- a/app/views/admin/products/edit.html.erb
+++ b/app/views/admin/products/edit.html.erb
@@ -18,7 +18,7 @@
 		<%= f.input :price %>
 	</div>
 
-	<% if @product.image.present? %>
+	<% if @product.photos.present? %>
 		<span>目前商品图</span> <br>
 		<% @product.photos.each do |p| %>
        <%= image_tag p.image.thumb.url %><br />
