--- a/app/views/common/_navbar.html.erb
+++ b/app/views/common/_navbar.html.erb
@@ -1,145 +1,85 @@
-<link rel="stylesheet" href="http://fortawesome.github.io/Font-Awesome/assets/font-awesome/css/font-awesome.css">
 
 <nav class="navbar navbar-default" role="navigation">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-megadropdown-tabs">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="#"><img src="http://d2r8jqmejizzox.cloudfront.net/361456-853098-65x38-logofinal.png"></a>
+      <a class="navbar-brand" href="/"><img src="http://d2r8jqmejizzox.cloudfront.net/361456-853098-65x38-logofinal.png"></a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="navbar-collapse style= collapse in" id="bs-megadropdown-tabs" style="
-    padding-left: 0px;
-">
+    <div class="navbar-collapse style= collapse in" id="bs-megadropdown-tabs" style="padding-left: 0px;">
         <ul class="nav navbar-nav">
-            <li><a href="#"><i class="fa fa-globe"></i> ALL</a></li>
-             <li><a href="#"><i class="fa fa-university"></i> POLITICS</a></li>
+						<li>
+		            <%= link_to products_path do %>
+		            <i class="fa fa-globe"> </i> 全部
+		            <% end %>
+		         </li>
 
-            <li class="dropdown mega-dropdown">
-			   <a href="#" class="dropdown-toggle" data-toggle="dropdown"> <i class="fa fa-space-shuttle"></i> CATEGORIES <span class="caret"></span></a>
+      <li class="dropdown mega-dropdown">
+			   <a href="#" class="dropdown-toggle" data-toggle="dropdown"> <i class="fa fa-space-shuttle"></i> 类别 <span class="caret"></span></a>
 				<div id="filters" class="dropdown-menu mega-dropdown-menu">
                     <div class="container-fluid2">
     				    <!-- Tab panes -->
                         <div class="tab-content">
-
-
                           <div class="tab-pane active" id="kids">
                             <ul class="nav-list list-inline">
-                                <li><a data-filter=".89" href="#"><img src="http://content.nike.com/content/dam/one-nike/globalAssets/menu_header_images/OneNike_Global_Nav_Icons_Running.png"><span>BRICS</span></a></li>
-                                <li><a data-filter=".97" href="#"><img src="http://content.nike.com/content/dam/one-nike/globalAssets/menu_header_images/OneNike_Global_Nav_Icons_Basketball.png"><span>Latin America</span></a></li>
-                                <li><a data-filter=".96" href="#"><img src="http://content.nike.com/content/dam/one-nike/globalAssets/menu_header_images/OneNike_Global_Nav_Icons_Football.png"><span>USA</span></a></li>
-                                <li><a data-filter=".87" href="#"><img src="http://content.nike.com/content/dam/one-nike/globalAssets/menu_header_images/OneNike_Global_Nav_Icons_Soccer.png"><span>Middle East</span></a></li>
-                                <li><a data-filter=".85" href="#"><img src="http://content.nike.com/content/dam/one-nike/globalAssets/menu_header_images/OneNike_Global_Nav_Icons_MensTraining.png"><span>Asia</span></a></li>
-                               <li><a data-filter=".90" href="#"><img src="http://content.nike.com/content/dam/one-nike/globalAssets/menu_header_images/OneNike_Global_Nav_Icons_MensTraining.png"><span>Africa</span></a></li>
-                            </ul>
-                          </div>
-                          <div class="tab-pane" id="sports">
-                            <ul class="nav-list list-inline">
-                                <li><a data-filter=".38" href="#"><img src="http://content.nike.com/content/dam/one-nike/globalAssets/menu_header_images/OneNike_Global_Nav_Icons_Basketball.png"><span>Technology</span></a></li>
-                                <li><a data-filter=".41" href="#"><img src="http://content.nike.com/content/dam/one-nike/globalAssets/menu_header_images/OneNike_Global_Nav_Icons_Football.png"><span>Music</span></a></li>
-                                <li><a data-filter=".62" href="#"><img src="http://content.nike.com/content/dam/one-nike/globalAssets/menu_header_images/OneNike_Global_Nav_Icons_Soccer.png"><span>Startups</span></a></li>
-                                <li><a data-filter=".82" href="#"><img src="http://content.nike.com/content/dam/one-nike/globalAssets/menu_header_images/OneNike_Global_Nav_Icons_MensTraining.png"><span>Celebrities</span></a></li>
-                                <li><a data-filter=".93" href="#"><img src="http://content.nike.com/content/dam/one-nike/globalAssets/menu_header_images/OneNike_Global_Nav_Icons_WomensTraining.png"><span>Entertainment</span></a></li>
-                                <li><a data-filter=".94" href="#"><img src="http://content.nike.com/content/dam/one-nike/globalAssets/menu_header_images/OneNike_Global_Nav_Icons_WomensTraining.png"><span>Series</span></a></li>
+                                <li><a data-filter=".89" href="/products/bgs"><img src="https://ww4.sinaimg.cn/large/006tNbRwgy1fcxxyx651aj302i02iweg.jpg"><span>办公室</span></a></li>
+                                <li><a data-filter=".97" href="/products/kt"><img src="https://ww3.sinaimg.cn/large/006tNbRwgy1fcxxz1a12bj302i02igli.jpg"><span>客厅</span></a></li>
+                                <li><a data-filter=".96" href="/products/cc"><img src="https://ww3.sinaimg.cn/large/006tNbRwgy1fcxxz86npkj302i02imx9.jpg"><span>餐厨</span></a></li>
+                                <li><a data-filter=".87" href="/products/ws"><img src="https://ww4.sinaimg.cn/large/006tNbRwgy1fcxxzbbpr1j302i02idfy.jpg"><span>卧室</span></a></li>
+                                <li><a data-filter=".85" href="/products/zmhdzcp"><img src="https://ww3.sinaimg.cn/large/006tNbRwgy1fcxxzfeee6j302i02idfu.jpg"><span>照明和电子产品</span></a></li>
+                                <li><a data-filter=".90" href="/products/pj"><img src="https://ww3.sinaimg.cn/large/006tNbRwgy1fcxxzhwa70j302i02ijr8.jpg"><span>配件</span></a></li>
                             </ul>
                           </div>
                         </div>
-                    </div>
-                    <!-- Nav tabs -->
-                    <ul class="nav nav-tabs" role="tablist">
-                       <li   class="active"><a href="#kids" role="tab" data-toggle="tab">Countries</a></li>
-                       <li><a href="#sports" role="tab" data-toggle="tab">Top Guess</a></li>
-                    </ul>
+                     </div>
 				</div>
 			</li>
-        </ul>
-        <form class="navbar-form navbar-left" role="search">
-            <div class="form-group">
-              <input type="text" class="form-control" placeholder="Search">
-            </div>
-            <button type="submit" class="btn btn-default">Submit</button>
-        </form>
+   </ul>
+
+	 <!-- 搜索框 -->
+		<div class="nav navbar-nav navbar-left">
+      <%= form_tag search_products_path , :method => :get  do %>
+      <div class="input-group" id="search-id" >
+        <input type="text" class="form-control" name="q" value="<%= params[:q] %>" placeholder="请输入商品信息">
+      <div class="input-group-btn">
+          <button class="btn btn-default" type="submit">
+            <i class="glyphicon glyphicon-search"></i>
+          </button>
+    </div>
+    <!-- 搜索框over   -->
+      </div>
+      <% end %>
+    </div>
+
         <ul class="nav navbar-nav navbar-right">
-        <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                        <span class="glyphicon glyphicon-user"></span> 
-                        <strong>Nombre</strong>
-                        <span class="glyphicon glyphicon-chevron-down"></span>
-                    </a>
-                    <ul style="background-color:white;" class="dropdown-menu">
-                        <li>
-                            <div class="navbar-login">
-                                <div class="row">
-                                    <div class="col-lg-4">
-                                        <p class="text-center">
-                                            <span class="glyphicon glyphicon-user icon-size"></span>
-                                        </p>
-                                    </div>
-                                    <div class="col-lg-8">
-                                        <p class="text-left"><strong>Nombre Apellido</strong></p>
-                                        <p class="text-left small">correoElectronico@email.com</p>
-                                        <p class="text-left">
-                                            <a href="#" class="btn btn-primary btn-block btn-sm">Actualizar Datos</a>
-                                        </p>
-                                    </div>
-                                </div>
-                            </div>
-                        </li>
-                        <li class="divider"></li>
-                        <li>
-                            <div class="navbar-login navbar-login-session">
-                                <div class="row">
-                                    <div class="col-lg-12">
-                                        <p>
-                                            <a href="#" class="btn btn-danger btn-block">Cerrar Sesion</a>
-                                        </p>
-                                    </div>
-                                </div>
-                            </div>
-                        </li>
-                    </ul>
-                </li>
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">SIGN IN <span class="caret"></span></a>
-             <ul id="login-dp" class="dropdown-menu">
-    			<li>
-					 <div class="row">
-							<div class="col-md-12">
-								Login via
-								<div class="social-buttons">
-									<a href="#" class="btn btn-fb"><i class="fa fa-facebook"></i> Facebook</a>
-									<a href="#" class="btn btn-tw"><i class="fa fa-twitter"></i> Twitter</a>
-								</div>
-                                or
-								 <form class="form" role="form" method="post" action="login" accept-charset="UTF-8" id="login-nav">
-										<div class="form-group">
-											 <label class="sr-only" for="exampleInputEmail2">Email address</label>
-											 <input type="email" class="form-control" id="exampleInputEmail2" placeholder="Email address" required="">
-										</div>
-										<div class="form-group">
-											 <label class="sr-only" for="exampleInputPassword2">Password</label>
-											 <input type="password" class="form-control" id="exampleInputPassword2" placeholder="Password" required="">
-                                             <div class="help-block text-right"><a href="">Forget the password ?</a></div>
-										</div>
-										<div class="form-group">
-											 <button type="submit" class="btn btn-primary btn-block">Sign in</button>
-										</div>
-										<div class="checkbox">
-											 <label>
-											 <input type="checkbox"> keep me logged-in
-											 </label>
-										</div>
-								 </form>
-							</div>
-							<div class="bottom text-center">
-								New here ? <a href="#"><b>Join Us</b></a>
-							</div>
+					<li>
+	            <%= link_to carts_path do %>
+	            购物车 <i class="fa fa-shopping-cart"> </i>( <%= current_cart.products.count %>)
+	            <% end %>
+	         </li>
+					 <% if !current_user %>
+              <li><%= link_to("注册", new_user_registration_path) %> </li>
+              <li><%= link_to(content_tag(:i, '登入', class: 'fa fa-sign-in'), new_user_session_path) %></li>
+              <% else %>
+              <li class="dropdown">
+                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Hi!, <%= current_user.email %>
+                 <b class="caret"></b>
+                 </a>
+                 <ul class="dropdown-menu">
+                 <% if current_user.admin? %>
+                 <li>
+                   <%= link_to("Admin 选单", admin_products_path ) %>
+                 </li>
+                 <% end %>
+                 <li>
+                   <%= link_to("个人订单列表", account_orders_path) %>
+                 </li>
+                    <li> <%= link_to(content_tag(:i, '登出', class: 'fa fa-sign-out'), destroy_user_session_path, method: :delete) %> </li>
+                 </ul>
+              </li>
+            <% end %>
+
 					 </div>
 				</li>
 			</ul>
