--- a/app/views/common/_navbar.html.erb
+++ b/app/views/common/_navbar.html.erb
@@ -1,6 +1,6 @@
 
 <nav class="navbar navbar-default" role="navigation">
-  <div class="container-fluid">
+  <div class="navbar-container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
       <a class="navbar-brand" href="/"><img src="http://d2r8jqmejizzox.cloudfront.net/361456-853098-65x38-logofinal.png"></a>
@@ -89,4 +89,3 @@
   </div><!-- /.container-fluid -->
 </nav>
     <!-- End Carousel -->
-</div>
