--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,14 +1,25 @@
+<div class="container">
 <div class="row">
 	<% @products.each do |product| %>
 	<div class="col-xs-6 col-md-3">
+	  <div class="pro-index">
 		<%= link_to product_path(product) do %>
 		<% if product.photos.present? %>
-		  <%= image_tag(product.photos[0].image.thumb.url, class: "thumbnail") %>
+		  <%= image_tag(product.photos[0].image.thumb.url ) %>
 		  <% else %>
 		  <%= image_tag("http://placehold.it/200x200&text=No Pic", class: "thumbnail") %>
 		  <% end %>
 		  <% end %>
-		  <%= product.title %> ￥<%= product.price %>
+		  <div class="pro-index-font">
+		   <div style="color: red">￥<%= product.price %></div>
+		 
+		   		 <%= link_to(product.description, product_path(product)) %> 
+		  </div>
+		 </div>
 	</div>
 	<% end %>
+</div>
+
+
+
 </div>
