--- a/app/views/common/_navbar.html.erb
+++ b/app/views/common/_navbar.html.erb
@@ -3,7 +3,7 @@
   <div class="navbar-container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
-      <a class="navbar-brand" href="/"><img src="http://d2r8jqmejizzox.cloudfront.net/361456-853098-65x38-logofinal.png"></a>
+      <a class="navbar-brand" href="/"><img src="https://ww3.sinaimg.cn/large/006tNbRwgy1fd1xsusgp5j301h014q2s.jpg"></a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
