--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,4 +1,9 @@
 <div class="container">
+<div class="bg-index">
+	<div class="btn bg-index-button active">沙发</div>
+	<div class="btn bg-index-button">床</div>
+	<div class="btn bg-index-button">座椅</div>
+</div>
 <div class="row">
 	<% @products.each do |product| %>
 	<div class="col-xs-6 col-md-3">
