edit welome footer and know you picture

--- a/app/views/common/_footer.html.erb
+++ b/app/views/common/_footer.html.erb
@@ -8,6 +8,6 @@
    	   
    </ul>
 	<p >Copyright ©2017 Desgin By 董名晏 和 孙艳</p>
-	     <p class="text-center">爱家商城欢迎您的光临</p>
+	     <p class="text-center">ILIFE 商城欢迎您的光临</p>
 </div>
 
