--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -137,8 +137,8 @@
 	<div class="row">
 	      <br>
 	      <div class="know-you">
-		懂你的<span class="heart">❤️</span>️！
-		</div>
+		懂你的<span class="heart">❤️</span>!
+        ️</div>
 	</div>
     <hr>
             <div class="row row-margin-bottom">
