--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -25,7 +25,7 @@
           <div class="tab-controller"><%= image_tag(@product.photos[3].image.medium.url, class: "thumbnail") %></div>
       </div>
       <% else %>
-        <p style="color: red;">图片数量不够4张</p>
+        <p style="color: red;margin-left: 60px;margin-bottom: 30px;">亲，没有更多详图了哦！</p>
        <% end %>
  </div>
 	<div class="col-md-6" style="margin-left: -10px">
