--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -57,7 +57,7 @@
 
 <div class="container">
 <div class="shading">
-<h2> 强烈推荐 </h2>
+<h2> 热烈推荐 </h2>
 <hr>
 <div class="row">
 <div class="product">
