add link to home piture

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -58,31 +58,34 @@
 <div class="container">
 <div class="shading">
 <h2> 热烈推荐 </h2>
+<div class="product-all">
+<a href="https://infinite-atoll-59672.herokuapp.com/products">更多商品 <</a>
+</div>
 <hr>
 <div class="row">
 <div class="product">
 	<div class="col-sm-4">
-		      <a href="#">
+		      <a href="https://infinite-atoll-59672.herokuapp.com/products/9">
 		        <img src="https://ooo.0o0.ooo/2017/02/19/58a950d26e80c.jpg" style="width:100%" >
 		        </a>
-               <p>￥ 2200</p>
-              <a href="#">时尚风格单人床</a>
+               <p>￥ 1899</p>
+              <a href="https://infinite-atoll-59672.herokuapp.com/products/9">时尚风格单人床</a>
               </div>
 
 	<div class="col-sm-4">
-	           <a href="#">
-		        <img src="https://ooo.0o0.ooo/2017/02/19/58a950d3023b0.jpg" style="width:100%" >
+	           <a href="https://infinite-atoll-59672.herokuapp.com/products/8">
+		        <img src="https://fullstack01.s3.amazonaws.com/uploads/photo/image/46/medium_11.jpg" style="width:100%" >
 		        </a>
-              <p>￥ 1800</p>
-             <a href="#">多功能个人电脑椅</a>
+              <p>￥ 288</p>
+             <a href="https://infinite-atoll-59672.herokuapp.com/products/8">多功能个人电脑椅</a>
 	</div>
 
 	<div class="col-sm-4">
-		<a href="#">
+		<a href="https://infinite-atoll-59672.herokuapp.com/products/10">
 		        <img src="https://ooo.0o0.ooo/2017/02/19/58a950d3b39d5.jpg" style="width:100%" >
 		        </a>
-               <p>￥ 5500</p>
-               <a href="#">超柔软垫袋弹簧沙发</a>
+               <p>￥ 5488</p>
+               <a href="https://infinite-atoll-59672.herokuapp.com/products/10">超柔软垫袋弹簧沙发</a>
 	          </div>
        </div>
               </div>
@@ -91,33 +94,33 @@
 <br><br>
 <h2> 特色商品 </h2>   
 <div class="product-all">
-<a href="#">更多商品 <</a>
+<a href="https://infinite-atoll-59672.herokuapp.com/products">更多商品 <</a>
 </div>
 <hr>
 <div class="row">
 <div class="product">
 	<div class="col-sm-4">
-		      <a href="#">
-		        <img src="https://ooo.0o0.ooo/2017/02/19/58a9616b5a0c2.jpg" style="width:100%" >
+		      <a href="https://infinite-atoll-59672.herokuapp.com/products/11">
+		        <img src="https://fullstack01.s3.amazonaws.com/uploads/photo/image/61/medium_1.jpg" style="width:100%" >
 		        </a>
-               <p>￥ 2600</p>
-              <a href="#">现代酷派的设计和玻璃顶板餐饮一套</a>
+               <p>￥ 1199</p>
+              <a href="https://infinite-atoll-59672.herokuapp.com/products/11">现代酷派的设计和玻璃顶板餐饮一套</a>
               </div>
 
 	<div class="col-sm-4">
-	           <a href="#">
+	           <a href="https://infinite-atoll-59672.herokuapp.com/products/12">
 		        <img src="https://ooo.0o0.ooo/2017/02/19/58a9623dd8e51.jpg" style="width:100%" >
 		        </a>
               <p>￥ 1800</p>
-             <a href="#">有脚床垫床Bonnerukoiru规范的两倍大小</a>
+             <a href="https://infinite-atoll-59672.herokuapp.com/products/12">有脚床垫床Bonnerukoiru规范的两倍大小</a>
 	</div>
 
 	<div class="col-sm-4">
-		<a href="#">
-		        <img src="https://ooo.0o0.ooo/2017/02/19/58a963311bd0a.jpg" style="width:100%" >
+		<a href="https://infinite-atoll-59672.herokuapp.com/products/13">
+		        <img src="https://fullstack01.s3.amazonaws.com/uploads/photo/image/71/medium_1.jpg" style="width:100%" >
 		        </a>
-               <p>￥ 2800</p>
-               <a href="#">超级柔和2座创意沙发</a>
+               <p>￥ 1888</p>
+               <a href="https://infinite-atoll-59672.herokuapp.com/products/13">超级柔和2座创意沙发</a>
 	          </div>
 </div>
 </div>
