--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -40,7 +40,12 @@
        <div class="product-price" style="font-size: 15px">售价   <span style="font-size: 20px; color: #fc3820;">￥<%= @product.price %></span></div>
 
       <br>
-       <div>
+
+     <%= link_to "#", :class => "like btn btn-default",method: :post do %>
+                    <i class="fa fa-heart" aria-hidden="true">    收藏宝贝</i>
+                    <% end %>
+
+       <div class="pull-right">
        <% if @product.quantity.present? && @product.quantity > 0 %>
        	    <%= link_to("加入购物车", add_to_cart_product_path(@product), :method => :post, :class => "btn btn-primary btn-lg btn-danger") %>
                   <% else %>
