--- a/app/views/common/_navbar.html.erb
+++ b/app/views/common/_navbar.html.erb
@@ -53,6 +53,11 @@
     </div>
 
         <ul class="nav navbar-nav navbar-right">
+           <li>
+              <%= link_to "#" do %>
+              收藏夹(<%=  %>)
+              <% end %>
+           </li>
 					<li>
 	            <%= link_to carts_path do %>
 	            购物车 <i class="fa fa-shopping-cart"> </i>( <%= current_cart.products.count %>)
