--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -41,7 +41,7 @@
 
       <br>
 
-     <%= link_to "#", :class => "like btn btn-default",method: :post do %>
+     <%= link_to collect_product_path(@product), :class => "like btn btn-default",method: :post do %>
                     <i class="fa fa-heart" aria-hidden="true">    收藏宝贝</i>
                     <% end %>
 
