--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,30 +1,44 @@
 <div class="container">
-<div class="bg-index">
-	<div class="btn bg-index-button active">沙发</div>
-	<div class="btn bg-index-button">床</div>
-	<div class="btn bg-index-button">座椅</div>
-</div>
-<div class="row">
-	<% @products.each do |product| %>
-	<div class="col-xs-6 col-md-3">
-	  <div class="pro-index">
-		<%= link_to product_path(product) do %>
-		<% if product.photos.present? %>
-		  <%= image_tag(product.photos[0].image.thumb.url ) %>
-		  <% else %>
-		  <%= image_tag("http://placehold.it/200x200&text=No Pic", class: "thumbnail") %>
-		  <% end %>
-		  <% end %>
-		  <div class="pro-index-font">
-		   <div style="color: red">￥<%= product.price %></div>
-		 
-		   		<%= link_to(product.description, product_path(product)) %> 
-		  </div>
-		 </div>
+	<!-- 上半页	 -->
+	<div class="container spy-body">
+		<div class="row spy-p">
+			     <p>
+	            <span>
+								所有商品陈列
+	            </span>
+	              希望能有您喜欢的，祝您购物愉快
+	          </p>
+		</div>
 	</div>
-	<% end %>
-</div>
-
-
-
+	<!-- 上半页over	 -->
+<!-- 下半页	 -->
+	<div class="row">
+    	<!-- BEGIN PRODUCTS -->
+			<% @products.each do |product| %>
+  		<div class="col-md-3 col-sm-6">
+    		<span class="thumbnail">
+					<%= link_to product_path(product) do %>
+		      <% if product.photos.present? %>
+		        <%= image_tag(product.photos[0].image.thumb.url ) %>
+		      <% else %>
+		        <%= image_tag("http://placehold.it/200x200&text=No Pic", class: "thumbnail") %>
+		      <% end %>
+			    <% end %>
+          <h4><%= link_to(product.title, product_path(product)) %></h4>
+      					<p class="price">￥<%= product.price %></p>
+					<p><%= product.description %></p>
+      			<hr class="line">
+						<div class="row">
+							<div class="col-md-4">
+								<a class="btn btn-primary btn-product"><span class="glyphicon glyphicon-thumbs-up"></span> Like</a>
+							</div>
+							<div class="col-md-4">
+								<a href="#" class="btn btn-success btn-product"><span class="glyphicon glyphicon-shopping-cart"></span> Buy</a></div>
+						</div>
+				</span>
+			</div>
+    <% end %>
+    <!-- END PRODUCTS -->
+  </div>
+<!-- 下半页over	 -->
 </div>
