--- a/app/views/products/search.html.erb
+++ b/app/views/products/search.html.erb
@@ -1,35 +1,45 @@
-<div>
-  <br>
+<div class="container">
+  <!-- 上半页	 -->
+	<div class="container spy-body">
+		<div class="row spy-p">
+    <p>
   <% if @products.blank? %>
-    <br>
-    <h2 class="search-info-title">搜索信息不能为空，或者您搜索的商品不存在</h2>
+    <span class="search-info-title">搜索信息不能为空，或者您搜索的商品不存在</span>
   <% else %>
-    <h2 class="search-info-title"> 有关"<%= @query_string %>"的商品信息 </h2>
-    <div class="search-result">
-
-      <div class="row jobs-show0"></div>
-      <div class="job-table">
+    <span class="search-info-title"> 有关"<%= @query_string %>"的商品信息 </span>
+    </p>
+    </div>
+  </div>
+  <!-- 上半页over	 -->
+  <!-- 下半页	 -->
+    <div class="row">
         <% @products.each do |product| %>
-        <div class="row jobs-show">
-          <div class="col-md-12 col-lg-9 col-lg-offset-1">
-            <div class="col-xs-6 col-md-3">
+        <div class="col-md-3 col-sm-6">
+      		<span class="thumbnail">
           		<%= link_to product_path(product) do %>
-          		<% if product.image.present? %>
+          		  <% if product.image.present? %>
           		  <%= image_tag(product.image.thumb.url, class: "thumbnail") %>
           		  <% else %>
           		  <%= image_tag("http://placehold.it/200x200&text=No Pic", class: "thumbnail") %>
           		  <% end %>
-          		  <% end %>
-          		  <%= product.title %> ￥<%= product.price %>
+          		 <% end %>
+          		  <h4><%= link_to(product.title, product_path(product)) %></h4>
+                <p class="price">￥<%= product.price %></p>
+					      <p><%= product.description %></p>
+                <hr class="line">
+    						<div class="row">
+    							<div class="col-md-4">
+    								<a class="btn btn-primary btn-product"><span class="glyphicon glyphicon-thumbs-up"></span> Like</a>
+    							</div>
+    							<div class="col-md-4">
+    								<a href="#" class="btn btn-success btn-product"><span class="glyphicon glyphicon-shopping-cart"></span> Buy</a>
+                  </div>
+    						</div>
+              </span>
           	</div>
-            <div class="pull-right">
-              发布时间：<%= product.created_at.to_date %>
-            </div>
+           <% end %>
           </div>
-        </div>
-        <% end %>
-      </div>
-    </div>
+<!-- 下半页over	 -->
     <div class="text-center">
       <%= will_paginate(@products, renderer: BootstrapPagination::Rails) %>
     </div>
