--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -544,16 +544,20 @@ background-position: 100% 50%;
 /*上半页over*/
 
 /*下半页*/
-h4{
-  font-weight: 600;
+.link{
+  color: #ed4c1c;
+}
+.link:hover{
+  color: red;
+  text-decoration: none;
 }
 p{
 font-size: 12px;
 margin-top: 5px;
 }
 .price{
-font-size: 30px;
-  margin: 0 auto;
+font-size: 20px;
+  margin: 0;
   color: #333;
 }
 .right{
@@ -567,10 +571,10 @@ transition: all 0.5s;
 }
 .thumbnail:hover{
 opacity:1.00;
-box-shadow: 0px 0px 10px #4bc6ff;
+box-shadow: 0px 0px 10px #444444;
 }
 .line{
-margin-bottom: 5px;
+margin-bottom: 10px;
 }
 @media screen and (max-width: 770px) {
 .right{
