--- a/app/views/products/search.html.erb
+++ b/app/views/products/search.html.erb
@@ -1,15 +1,21 @@
 <div class="container">
   <!-- 上半页	 -->
-	<div class="container spy-body">
+  <% if @products.blank? %>
+  <div class="container spy-body">
 		<div class="row spy-p">
     <p>
-  <% if @products.blank? %>
     <span class="search-info-title">搜索信息不能为空，或者您搜索的商品不存在</span>
+  </p>
+ </div>
+</div>
   <% else %>
+  <div class="container spy-body">
+    <div class="row spy-p">
+    <p>
     <span class="search-info-title"> 有关"<%= @query_string %>"的商品信息 </span>
     </p>
-    </div>
   </div>
+ </div>
   <!-- 上半页over	 -->
   <!-- 下半页	 -->
     <div class="row">
@@ -23,17 +29,21 @@
           		  <%= image_tag("http://placehold.it/200x200&text=No Pic", class: "thumbnail") %>
           		  <% end %>
           		 <% end %>
-          		  <h4><%= link_to(product.title, product_path(product)) %></h4>
+          		  <h4><%= link_to(product.title, product_path(product),:class => "link") %></h4>
                 <p class="price">￥<%= product.price %></p>
 					      <p><%= product.description %></p>
                 <hr class="line">
     						<div class="row">
-    							<div class="col-md-4">
-    								<a class="btn btn-primary btn-product"><span class="glyphicon glyphicon-thumbs-up"></span> Like</a>
+                  <div class="col-md-4">
+    								<%= link_to(add_to_cart_product_path(product), :method => :post, :class => "link") do %>
+    								<i class="fa fa-heart"> </i>收藏
+    								<% end %>
     							</div>
-    							<div class="col-md-4">
-    								<a href="#" class="btn btn-success btn-product"><span class="glyphicon glyphicon-shopping-cart"></span> Buy</a>
-                  </div>
+    							<div class="col-md-3.5">
+    								<%= link_to(add_to_cart_product_path(product), :method => :post, :class => "link") do %>
+                        <i class="fa fa-shopping-cart"> </i>购买
+    								<% end %>
+    						  </div>
     						</div>
               </span>
           	</div>
