--- a/app/views/products/search.html.erb
+++ b/app/views/products/search.html.erb
@@ -23,8 +23,8 @@
         <div class="col-md-3 col-sm-6">
       		<span class="thumbnail">
           		<%= link_to product_path(product) do %>
-          		  <% if product.image.present? %>
-          		  <%= image_tag(product.image.thumb.url, class: "thumbnail") %>
+          		  <% if product.photos.present? %>
+            <%= image_tag(product.photos[0].image.thumb.url ) %>
           		  <% else %>
           		  <%= image_tag("http://placehold.it/200x200&text=No Pic", class: "thumbnail") %>
           		  <% end %>
